--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@reduxjs/toolkit": "^2.9.1",
     "@tailwindcss/vite": "^4.1.14",
     "axios": "^1.12.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
     "lenis": "^1.3.11",
     "lucide-react": "^0.546.0",
@@ -23,6 +25,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.4",
     "sonner": "^2.0.7",
+    "tailwind-merge": "^3.3.1",
     "zod": "^4.1.12"
   },
   "devDependencies": {
