--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
     "lenis": "^1.3.11",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.546.0",
     "moment": "^2.30.1",
     "react": "^19.1.1",
