Add caching headers for static assets to improve performance

--- a/netlify.toml
+++ b/netlify.toml
@@ -31,6 +31,22 @@
     # X-XSS-Protection - Enable XSS filter
     X-XSS-Protection = "1; mode=block"
 
+# Cache static assets for better performance
+[[headers]]
+  for = "/assets/*"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
+
+[[headers]]
+  for = "/*.css"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
+
+[[headers]]
+  for = "/*.js"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
+
 [[redirects]]
   from = "/*"
   to = "/index.html"
